--- a/website/nutanix.erb
+++ b/website/nutanix.erb
@@ -483,6 +483,11 @@
                 <li<%= sidebar_current("docs-nutanix-datasource-lcm-config-v2") %>>
                     <a href="/docs/providers/nutanix/d/nutanix_lcm_config_v2.html">nutanix_lcm_config_v2</a>
                 </li>
+
+                <%# security V2: Datasources under security2 %>
+                <li<%= sidebar_current("docs-nutanix-datasource-stigs-v2") %>>
+                    <a href="docs/d/stigs_v2.html.markdown">nutanix_stigs_v2</a>
+                </li>
             </ul>
         </li>
 
